RESOLVED FIXED 53928
[Mac] spatial navigation is not set to false in DumpRenderTree explicitly
https://bugs.webkit.org/show_bug.cgi?id=53928
Summary [Mac] spatial navigation is not set to false in DumpRenderTree explicitly
Chang Shu
Reported 2011-02-07 10:36:28 PST
The preference in DumpRenderTree (Mac version) is missing a call to [preferences setSpatialNavigationEnabled:NO]. This may cause flaky tests where spatial navigation is enabled by accident.
Attachments
fix patch (1.31 KB, patch)
2011-02-07 10:47 PST, Chang Shu
no flags
Chang Shu
Comment 1 2011-02-07 10:47:51 PST
Created attachment 81491 [details] fix patch
Chang Shu
Comment 2 2011-02-07 12:52:06 PST
Comment on attachment 81491 [details] fix patch Clearing flags on attachment: 81491 Committed r77836: <http://trac.webkit.org/changeset/77836>
Chang Shu
Comment 3 2011-02-07 12:53:16 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2011-02-07 13:21:04 PST
http://trac.webkit.org/changeset/77836 might have broken Qt Linux Release
Chang Shu
Comment 5 2011-02-07 13:41:19 PST
(In reply to comment #4) > http://trac.webkit.org/changeset/77836 might have broken Qt Linux Release The patch only touches one .mm file. It shouldn't break Qt builds or tests.
Note You need to log in before you can comment on or make changes to this bug.