2011-02-07  Chang Shu  <chang.shu@nokia.com>

Reviewed by Darin Adler.

        We should disable spatial navigation explicitly during the initialization
        of DumpRenderTree.
        https://bugs.webkit.org/show_bug.cgi?id=53928

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):



Canonical link: https://commits.webkit.org/67895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77836 268f45cc-cd09-0410-ab3c-d52691b4dbfc